third_party/move/move-compiler-v2/tests/more-v1/parser/function_params_missing.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_params_missing.move:3:12
  │
3 │     fun fn { }
  │            ^
  │            │
  │            Unexpected '{'
  │            Expected '('
